--- a/drivers/misc/mediatek/base/power/Makefile
+++ b/drivers/misc/mediatek/base/power/Makefile
@@ -13,7 +13,7 @@
 
 obj-$(CONFIG_MACH_MT6853) += ptp3_v1/
 obj-$(CONFIG_MACH_MT6893) += ptp3_v1/
-#obj-$(CONFIG_MACH_MT6833) += ptp3_v1/
+obj-$(CONFIG_MACH_MT6833) += ptp3_v1/
 obj-$(CONFIG_MACH_MT6885) += credit_didt_v1/
 obj-$(CONFIG_MACH_MT6873) += credit_didt_v1/
 obj-$(CONFIG_MACH_MT6885) += brisket_v1/
@@ -42,6 +42,7 @@ obj-$(CONFIG_MACH_MT6771) += upower_v2/
 obj-$(CONFIG_MACH_MT6739) += upower_v2/
 obj-$(CONFIG_MACH_MT8168) += upower_v2/
 obj-$(CONFIG_MACH_MT6893) += upower_v2/
+obj-$(CONFIG_MACH_MT6833) += upower_v2/
 endif
 ifneq ($(CONFIG_FPGA_EARLY_PORTING), y)
 obj-$(CONFIG_MACH_MT6771) += pbm_v3/
@@ -52,16 +53,19 @@ obj-$(CONFIG_MACH_MT6885) += pbm_v4/
 obj-$(CONFIG_MACH_MT6893) += pbm_v4/
 obj-$(CONFIG_MACH_MT6873) += pbm_v4/
 obj-$(CONFIG_MACH_MT6853) += pbm_v4/
+obj-$(CONFIG_MACH_MT6833) += pbm_v4/
 obj-$(CONFIG_MACH_MT6768) += mdpm_v1/
 obj-$(CONFIG_MACH_MT6785) += mdpm_v2/
 obj-$(CONFIG_MACH_MT6885) += mdpm_v2/
 obj-$(CONFIG_MACH_MT6893) += mdpm_v2/
 obj-$(CONFIG_MACH_MT6873) += mdpm_v2/
 obj-$(CONFIG_MACH_MT6853) += mdpm_v2/
+obj-$(CONFIG_MACH_MT6833) += mdpm_v2/
 obj-$(CONFIG_MACH_MT6885) += power_throttling/
 obj-$(CONFIG_MACH_MT6893) += power_throttling/
 obj-$(CONFIG_MACH_MT6873) += power_throttling/
 obj-$(CONFIG_MACH_MT6853) += power_throttling/
+obj-$(CONFIG_MACH_MT6833) += power_throttling/
 obj-$(CONFIG_MACH_MT6771) += vcorefs_v3/
 obj-$(CONFIG_MACH_MT6739) += vcorefs_v3/
 obj-$(CONFIG_MACH_MT6771) += cpuidle_v3/
@@ -92,7 +96,6 @@ obj-$(CONFIG_MACH_MT6885) += power_gs_v1/
 obj-$(CONFIG_MACH_MT6893) += power_gs_v1/
 obj-$(CONFIG_MACH_MT6873) += power_gs_v1/
 obj-$(CONFIG_MACH_MT6853) += power_gs_v1/
-obj-$(CONFIG_MACH_MT6833) += power_gs_v1/
 obj-$(CONFIG_MACH_MT6885) += gpufreq_v1/
 obj-$(CONFIG_MACH_MT6893) += gpufreq_v1/
 obj-$(CONFIG_MACH_MT6873) += gpufreq_v1/
