sound: add sia81xx codecs
Signed-off-by: Bharat Dev Burman <bharat.singh7924@gmail.com>

--- a/sound/soc/codecs/sia81xx/Makefile
+++ b/sound/soc/codecs/sia81xx/Makefile
@@ -13,10 +13,10 @@ snd-soc-sia81xx-objs := \
 		sia8108_regs.o \
 		sia8109_regs.o \
 		sia81xx_timer_task.o \
-		
+
 ifeq ($(EN_SIA81XX_TUNING),y)
 
-EXTRA_CFLAGS += -DSIA81XX_TUNING
+ccflags-y += -DSIA81XX_TUNING
 
 snd-soc-sia81xx-objs += sia81xx_socket.o
 
@@ -25,13 +25,14 @@ snd-soc-sia81xx-objs += sia81xx_afe.o
 endif
 
 ifeq ($(TUNING_PLATFORM),mtk)
+ccflags-y += -DVENDOR_EDIT
 snd-soc-sia81xx-objs += sia81xx_tuning_if_dev.o
 endif
 
 endif
 
 ifeq ($(COMPILE_TO_MODULE),y)
-EXTRA_CFLAGS += -DSIA81XX_COMPILE_TO_MODULE
+ccflags-y += -DSIA81XX_COMPILE_TO_MODULE
 obj-m += snd-soc-sia81xx.o
 else
 obj-y += snd-soc-sia81xx.o
