--- a/arch/arm64/configs/oppo6833_defconfig
+++ b/arch/arm64/configs/oppo6833_defconfig
@@ -1915,7 +1915,7 @@ CONFIG_MTK_AEE_FEATURE=y
 CONFIG_MTK_AEE_AED=y
 CONFIG_MTK_AEE_IPANIC=y
 CONFIG_MTK_AEE_HANG_DETECT=y
-# CONFIG_MTK_AEE_MRDUMP is not set
+CONFIG_MTK_AEE_MRDUMP=y
 # CONFIG_USBIF_COMPLIANCE is not set
 # CONFIG_USB_MU3D_PIO_ONLY is not set
 # CONFIG_USB_MU3D_DRV is not set
