Fix syntax error in action yml

--- a/.github/workflows/kernel-ci.yml
+++ b/.github/workflows/kernel-ci.yml
@@ -1,7 +1,6 @@
 name: Android kernel building CI
 
-on:
-  [ push, pull_request ]:
+on: [ push, pull_request ]
     branches: [ android-11 ]
 
 jobs:
