Fix syntax error again

--- a/.github/workflows/kernel-ci.yml
+++ b/.github/workflows/kernel-ci.yml
@@ -1,6 +1,9 @@
 name: Android kernel building CI
 
-on: [ push, pull_request ]
+on:
+  push:
+    branches: [ android-11 ]
+  pull_request:
     branches: [ android-11 ]
 
 jobs:
