ci.yml: add binutils for compiler

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,8 @@ name: RM6833 kernel CI
 on:
   push:
     branches: [ android-11 ]
-
+  workflow_run:
+  
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -24,7 +25,7 @@ jobs:
         NAME: RM6833-Porting-Test
       with:
         arch: arm64
-        compiler: aosp-clang/android11-release/clang-r365631c
+        compiler: aosp-clang/android11-release/clang-r365631c, aosp-clang/android11-release/clang-r365631c/binutils
         defconfig: oppo6833_defconfig
         image: Image.gz-dtb
 
