--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+    - name: Update git
+      run: |
+        sudo apt update
+        sudo apt upgrade git
+
     - name: Checkout kernel source
       uses: actions/checkout@v2
 
