--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,10 +8,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - name: Update git
-      run: |
-        sudo apt update
-        sudo apt upgrade git
+    - name: Fix the git workspace issue
+      run: sudo git config --global --add safe.directory /github/workspace
 
     - name: Checkout kernel source
       uses: actions/checkout@v2
