--- a/arch/arm64/configs/oppo6833_defconfig
+++ b/arch/arm64/configs/oppo6833_defconfig
@@ -1335,7 +1335,7 @@ CONFIG_MTK_LPM_MT6833=y
 # CONFIG_MTK_LPM_MT6873 is not set
 # CONFIG_MTK_LPM_MT6885 is not set
 # MultiMedia, Display, Camera
-CONFIG_CUSTOM_KERNEL_IMGSENSOR="ov13b10_mipi_raw s5k3l6_mipi_raw gc02m1b_mipi_mono gc02m1_mipi_raw ov02b10_mipi_raw s5kgm1st_mipi_raw_apollob gc02m1b_mipi_mono_apollob ov02b10_mipi_raw_apollob s5k3p9sp_mipi_raw_apollob ov13b10_mipi_raw_apollob"
+CONFIG_CUSTOM_KERNEL_IMGSENSOR="ov13b10_mipi_raw s5k3l6_mipi_raw gc02m1b_mipi_mono ov02b10_mipi_raw s5kgm1st_mipi_raw_apollob gc02m1b_mipi_mono_apollob ov02b10_mipi_raw_apollob s5k3p9sp_mipi_raw_apollob ov13b10_mipi_raw_apollob"
 CONFIG_CUSTOM_KERNEL_CAM_CAL_DRV="BRCB032GWZ_3 GT24c32a cat24c16"
 CONFIG_MTK_SEC_VIDEO_PATH_SUPPORT=y
 CONFIG_MTK_DRM_KEY_MNG_SUPPORT=y
