--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
     - name: Release build
       uses: appleboy/telegram-action@master
       with:
-        to: ${{ secrets.CHANNEL_ID }}
+        to: ${{ secrets.TELEGRAM_TO }}
         token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
         message: Kernel is built!, it took about ${{ steps.build.outputs.elapsed_time }} seconds.
         document: ${{ steps.build.outputs.outfile }}
