--- a/arch/arm64/configs/RM6833_defconfig
+++ b/arch/arm64/configs/RM6833_defconfig
@@ -1,3 +1,4 @@
+CONFIG_LOCALVERSION="-ThunderStorm-2.0"
 CONFIG_CROSS_COMPILE="aarch64-linux-android-"
 # CONFIG_LOCALVERSION_AUTO is not set
 # CONFIG_FHANDLE is not set
