--- a/arch/arm64/configs/RM6833_defconfig
+++ b/arch/arm64/configs/RM6833_defconfig
@@ -21,7 +21,7 @@ CONFIG_DEFAULT_USE_ENERGY_AWARE=y
 CONFIG_SYSCTL_SYSCALL=y
 # CONFIG_KALLSYMS_BASE_RELATIVE is not set
 # CONFIG_SLUB_DEBUG is not set
-CONFIG_CC_STACKPROTECTOR_STRONG=y
+# CONFIG_CC_STACKPROTECTOR_STRONG
 #CONFIG_LTO_CLANG=y
 #CONFIG_CFI_CLANG=y
 CONFIG_MODULE_SRCVERSION_ALL=y
